# BitZenyAndroidMiningLibrary

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ottylab/bitzenyminer/: ExampleInstrumentedTest.java  MainActivityTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/libcpuminer/: CMakeLists.txt  libcpuminer.c  libcpuminer.h  util.c
app/src/main/java/com/example/ottylab/bitzenyminer/: MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ottylab/bitzenyminer/: ExampleUnitTest.java  UtilsUnitTest.java
bitzenymininglibrary/: CMakeLists.txt  build.gradle
bitzenymininglibrary/src/androidTest/java/com/example/ottylab/bitzenymininglibrary/: ExampleInstrumentedTest.java
bitzenymininglibrary/src/main/: AndroidManifest.xml
bitzenymininglibrary/src/main/cpp/: bitzenymininglibrary.cpp
bitzenymininglibrary/src/main/cpp/libcpuminer/: .gitignore  CMakeLists.txt  cpuminer-config.h  libcpuminer.h  miner.h  yescrypt-opt.c  yescrypt-simd.c
bitzenymininglibrary/src/main/java/com/example/ottylab/bitzenymininglibrary/: BitZenyMiningLibrary.java
bitzenymininglibrary/src/main/res/values/: strings.xml
bitzenymininglibrary/src/test/java/com/example/ottylab/bitzenymininglibrary/: ExampleUnitTest.java
distribution/cpuminer/include/: libcpuminer.h
gradle/wrapper/: gradle-wrapper.properties
